IF(WRAP_VTK)
    FIND_PACKAGE(VTK REQUIRED)
	INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS})
    ADD_DEFINITIONS(-DVTK_OUTPUT)

    SET(EXTRA_SOURCES VTKPointCloud.cpp)
    SET(EXTRA_LIBS vtkIOLegacy vtkCommonDataModel)
ENDIF()

ADD_EXECUTABLE(Test_Emitters Test_Emitters.cpp ${EXTRA_SOURCES} ../../RandomAVX.cpp ../../PacketDirection.cpp ../../SSEMath.cpp)
TARGET_LINK_LIBRARIES(Test_Emitters ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${EXTRA_LIBS} SFMT)
